--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="portfolio" data-page="publications">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
