--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
       <article class="portfolio" data-page="publications">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Publications</h2>
         </header>
 
         <section class="projects">
