--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
           </ol>
 
         </section>
-
+<!-- 
         <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
@@ -641,7 +641,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
