--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    and is very concerned about the needs of chip. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -299,7 +299,7 @@
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    and is very concerned about the needs of chip. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -321,7 +321,7 @@
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    and is very concerned about the needs of chip. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -343,7 +343,7 @@
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    and is very concerned about the needs of chip. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -387,7 +387,7 @@
                 <p>
                   Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                   lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                  and is very concerned about the needs of chip. Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
                   elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                 </p>
@@ -401,48 +401,48 @@
  -->
 
         <!--
-          - clients
+          - chips
         -->
 
-        <section class="clients">
+        <section class="chips">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 chips-title">chips</h3>
 
-          <ul class="clients-list has-scrollbar">
+          <ul class="chips-list has-scrollbar">
 
-            <li class="clients-item">
+            <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                <img src="./assets/images/logo-1-color.png" alt="chip logo">
               </a>
             </li>
 
-            <li class="clients-item">
+            <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
+                <img src="./assets/images/logo-2-color.png" alt="chip logo">
               </a>
             </li>
 
-            <li class="clients-item">
+            <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                <img src="./assets/images/logo-3-color.png" alt="chip logo">
               </a>
             </li>
 
-            <li class="clients-item">
+            <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                <img src="./assets/images/logo-4-color.png" alt="chip logo">
               </a>
             </li>
 
-            <li class="clients-item">
+            <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                <img src="./assets/images/logo-5-color.png" alt="chip logo">
               </a>
             </li>
 
-            <li class="clients-item">
+            <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                <img src="./assets/images/logo-6-color.png" alt="chip logo">
               </a>
             </li>
 
