Update class chips

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
         <section class="chips">
 
-          <h3 class="h3 chips-title">chips</h3>
+          <h3 class="h3 chips-title">Chip Gallery</h3>
 
           <ul class="chips-list has-scrollbar">
 
@@ -480,41 +480,28 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">University of Notre Dame, Notre Dame, IN, USA</h4>
 
-              <span>2007 — 2008</span>
+              <span>2022 — present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Ph.D., Department of Electrical Engineering
+              </p>
+              
+              <p>
+                Advisor: Prof. Ningyuan Cao
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Southeast University, Nanjing, Jiangsu, China </h4>
 
-              <span>2006 — 2007</span>
-
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
+              <span>2016 — 2020</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                B.S., School of Internet of Things
               </p>
 
             </li>
@@ -537,42 +524,39 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Intern, Logic Pathfinding Lab Research Scientist - DTCO</h4>
 
-              <span>2015 — Present</span>
+              <span>May 2025 — Aug 2025</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Samsung Semiconductor, San Jose, CA, USA (On-site)
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Intern, Logic Pathfinding Lab Research Scientist - SRAM</h4>
 
-              <span>2013 — 2015</span>
+              <span>May 2024 — Aug 2024</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Samsung Semiconductor, San Jose, CA, USA (On-site)
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Research Assistant</h4>
 
-              <span>2010 — 2013</span>
+              <span>Aug 2020 — Dec 2021</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Southeast University, Nanjing, Jiangsu, China (On-site)
+              </p>
+              <p>
+                Advisor: Prof. Weiwei Shan
               </p>
 
             </li>
