Fix font in resume

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
               <p class="timeline-text">
                 Ph.D., Department of Electrical Engineering
               </p>
-              
-              <p>
+
+              <p class="timeline-text">
                 Advisor: Prof. Ningyuan Cao
               </p>
 
@@ -555,7 +555,7 @@
               <p class="timeline-text">
                 Southeast University, Nanjing, Jiangsu, China (On-site)
               </p>
-              <p>
+              <p class="timeline-text">
                 Advisor: Prof. Weiwei Shan
               </p>
 
