--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/PUF.png" alt="design icon" width="80">
               </div>
 
               <div class="service-content-box">
