add button for resume

--- a/index.html
+++ b/index.html
@@ -162,15 +162,21 @@
         <section class="about-text">
 
           <p>
-            I am Boyang Cheng, a Ph.D. student in Electrical Engineering at the University of Notre Dame. My research lies at the intersection of digital and analog/mixed-signal circuit design, with a focus on developing energy-efficient and trustworthy hardware systems.
+            I am Boyang Cheng, a Ph.D. student in Electrical Engineering at the University of Notre Dame. My research
+            lies at the intersection of digital and analog/mixed-signal circuit design, with a focus on developing
+            energy-efficient and trustworthy hardware systems.
           </p>
 
           <p>
-            I am passionate about creating circuit and system solutions that bridge advanced digital architectures with robust analog and mixed-signal techniques. My work explores innovations that enable secure, privacy-aware, and low-power computation, particularly for edge devices and intelligent sensing applications.
+            I am passionate about creating circuit and system solutions that bridge advanced digital architectures with
+            robust analog and mixed-signal techniques. My work explores innovations that enable secure, privacy-aware,
+            and low-power computation, particularly for edge devices and intelligent sensing applications.
           </p>
 
           <p>
-            With a background in both digital and analog/mixed-signal design, I enjoy tackling challenges that require cross-domain thinking and collaboration. My long-term goal is to advance hardware platforms that empower the next generation of intelligent, reliable, and resource-efficient technologies.
+            With a background in both digital and analog/mixed-signal design, I enjoy tackling challenges that require
+            cross-domain thinking and collaboration. My long-term goal is to advance hardware platforms that empower the
+            next generation of intelligent, reliable, and resource-efficient technologies.
           </p>
 
         </section>
@@ -189,14 +195,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/PUF.png" alt="design icon" width="80">
+                <img src="./assets/images/PUF.png" alt="design icon" width="180">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Hardware Security</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Physical Unclonable Functions (PUFs) and Federated Learning (FL)
                 </p>
               </div>
 
@@ -254,7 +260,7 @@
 
         </section>
 
-<!-- 
+        <!-- 
           - testimonials
 
         <section class="testimonials">
@@ -563,7 +569,7 @@
           </ol>
 
         </section>
-<!-- 
+        <!-- 
         <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
@@ -625,6 +631,13 @@
           </ul>
 
         </section> -->
+
+        <section class="resume-download">
+          <a class="form-btn" href="./assets/files/Boyang_Cheng_s_CV.pdf" download>
+            <ion-icon name="download-outline"></ion-icon>
+            <span>Download PDF Resume</span>
+          </a>
+        </section>
 
       </article>
 
