add button for google scholar

--- a/index.html
+++ b/index.html
@@ -635,7 +635,14 @@
         <section class="resume-download">
           <a class="form-btn" href="./assets/files/Boyang_Cheng_s_CV.pdf" download>
             <ion-icon name="download-outline"></ion-icon>
-            <span>Download PDF Resume</span>
+            <span>Download My PDF Resume</span>
+          </a>
+        </section>
+
+        <section class="resume-scholar">
+          <a class="form-btn" href="https://scholar.google.com/citations?user=QHEX6EcAAAAJ&hl=en" target="_blank">
+            <ion-icon name="scholar-outline"></ion-icon>
+            <span>Visit My Google Scholar</span>
           </a>
         </section>
 
