add button for google scholar

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 
         <section class="resume-scholar">
           <a class="form-btn" href="https://scholar.google.com/citations?user=QHEX6EcAAAAJ&hl=en" target="_blank">
-            <ion-icon name="scholar-outline"></ion-icon>
+            <ion-icon name="school-outline"></ion-icon>
             <span>Visit My Google Scholar</span>
           </a>
         </section>
