--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/PUF.png" alt="design icon" width="150">
+                <img src="./assets/images/PUF.png" alt="PUF icon" width="150">
               </div>
 
               <div class="service-content-box">
@@ -211,7 +211,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="130">
               </div>
 
               <div class="service-content-box">
@@ -227,7 +227,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="130">
               </div>
 
               <div class="service-content-box">
@@ -243,11 +243,11 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-photo.svg" alt="risc-v icon" width="130">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">RISC-V</h4>
 
                 <p class="service-item-text">
                   I make high-quality photos of any category at a professional level.
