add risc-v figure

--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="risc-v icon" width="130">
+                <img src="./assets/images/risc-v.svg" alt="risc-v icon" width="150">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">RISC-V</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Lightweigh RV32I RISC-V Core for chip testing
                 </p>
               </div>
 
