add risc-v figure

--- a/index.html
+++ b/index.html
@@ -162,15 +162,11 @@
         <section class="about-text">
 
           <p>
-            I am Boyang Cheng, a Ph.D. student in Electrical Engineering at the University of Notre Dame. My research
-            lies at the intersection of digital and analog/mixed-signal circuit design, with a focus on developing
-            energy-efficient and trustworthy hardware systems.
-          </p>
-
-          <p>
-            I am passionate about creating circuit and system solutions that bridge advanced digital architectures with
-            robust analog and mixed-signal techniques. My work explores innovations that enable secure, privacy-aware,
-            and low-power computation, particularly for edge devices and intelligent sensing applications.
+            I am Boyang Cheng, I received the B.S. degree in Southeast University, Nanjing, China, in 2020. 
+            I am currently pursuing the Ph.D. degree in Electrical Engineering at the University of Notre Dame. 
+            My research lies at the intersection of digital and analog/mixed-signal circuit design, with a focus on developing
+            energy-efficient and explainable/trustworthy hardware systems.
+            In 2024, I interned at Samsung working on SRAM design, and in 2025, I focused on design technology co-optimization (DTCO).
           </p>
 
           <p>
@@ -211,14 +207,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="130">
+                <img src="./assets/images/explainability.png" alt="Explainability icon" width="150">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Explainable/Trustworthy Design</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Circuit design for explainable AI on Bio-medical Devices and Autonomous Driving
                 </p>
               </div>
 
@@ -227,7 +223,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="130">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="150">
               </div>
 
               <div class="service-content-box">
@@ -250,7 +246,7 @@
                 <h4 class="h4 service-item-title">RISC-V</h4>
 
                 <p class="service-item-text">
-                  Lightweigh RV32I RISC-V Core for chip testing
+                  Lightweigh RV32I RISC-V core for chip testing
                 </p>
               </div>
 
