--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="150">
+                <img src="./assets/images/dice.svg" alt="dice icon" width="100">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Stochastic Computation</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Compute in Entropy (CIE)
                 </p>
               </div>
 
@@ -239,7 +239,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/risc-v.svg" alt="risc-v icon" width="150">
+                <img src="./assets/images/risc-v.svg" alt="risc-v icon" width="130">
               </div>
 
               <div class="service-content-box">
