--- a/index.html
+++ b/index.html
@@ -413,19 +413,19 @@
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="chip logo">
+                <img src="./assets/images/chip_vlsi_hdc.png" alt="chip logo">
               </a>
             </li>
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="chip logo">
+                <img src="./assets/images/chip_anomaly_detection.png" alt="chip logo">
               </a>
             </li>
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="chip logo">
+                <img src="./assets/images/chip_tdbnn.gif" alt="chip logo">
               </a>
             </li>
 
