--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <h4 class="h4 service-item-title">Stochastic Computation</h4>
 
                 <p class="service-item-text">
-                  Compute in Entropy (CIE)
+                  Compute in Entropy (CIE) 
                 </p>
               </div>
 
@@ -413,19 +413,19 @@
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/chip_vlsi_hdc.png" alt="chip logo">
+                <img src="./assets/images/chip_vlsi_hdc.png" alt="chip logo" height="200">
               </a>
             </li>
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/chip_anomaly_detection.png" alt="chip logo">
+                <img src="./assets/images/chip_anomaly_detection.png" alt="chip logo" height="200">
               </a>
             </li>
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/chip_tdbnn.gif" alt="chip logo">
+                <img src="./assets/images/chip_tdbnn.gif" alt="chip logo" height="200">
               </a>
             </li>
 
