add 3 die photos

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/chip_vlsi_hdc.png" alt="chip logo">
+                <img src="./assets/images/chip_vlsi_hdc.png" alt="chip logo" height="100">
               </a>
             </li>
 
