--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Publications</button>
-          </li>
+          </li> -->
 
         </ul>
 
