disable publications button

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <h4 class="h4 service-item-title">Stochastic Computation</h4>
 
                 <p class="service-item-text">
-                  Compute in Entropy (CIE) 
+                  Compute in Entropy (CIE): Utilize process variation for high energy-efficient computation
                 </p>
               </div>
 
