disable publications button

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
             <li class="chips-item">
               <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="chip logo">
+                <img src="./assets/images/chip_tcam.png" alt="chip logo" style="filter: grayscale(0.95);">
               </a>
             </li>
 
