--- a/index.html
+++ b/index.html
@@ -532,6 +532,9 @@
               <p class="timeline-text">
                 Samsung Semiconductor, San Jose, CA, USA (On-site)
               </p>
+              <p>
+                Design-Technology Co-Optimization (DTCO) Engineer at Samsung, focusing on advanced standard cell library and SRAM design. Experienced in developing DRC/LVS rule decks, and optimizing library architectures for diverse applications.
+              </p>
 
             </li>
 
@@ -543,6 +546,9 @@
 
               <p class="timeline-text">
                 Samsung Semiconductor, San Jose, CA, USA (On-site)
+              </p>
+              <p>
+                Advanced Design of SRAM Bitcells and Peripheral Circuits
               </p>
 
             </li>
@@ -558,6 +564,9 @@
               </p>
               <p class="timeline-text">
                 Advisor: Prof. Weiwei Shan
+              </p>
+              <p>
+                Low-power digital IC design and fault-tolerant computing, developing energy-efficient and reliable computing architectures.
               </p>
 
             </li>
