--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               <p class="timeline-text">
                 Samsung Semiconductor, San Jose, CA, USA (On-site)
               </p>
-              <p>
+              <p class="timeline-text">
                 Design-Technology Co-Optimization (DTCO) Engineer at Samsung, focusing on advanced standard cell library and SRAM design. Experienced in developing DRC/LVS rule decks, and optimizing library architectures for diverse applications.
               </p>
 
@@ -548,7 +548,7 @@
               <p class="timeline-text">
                 Samsung Semiconductor, San Jose, CA, USA (On-site)
               </p>
-              <p>
+              <p class="timeline-text">
                 Advanced Design of SRAM Bitcells and Peripheral Circuits
               </p>
 
@@ -566,7 +566,7 @@
               <p class="timeline-text">
                 Advisor: Prof. Weiwei Shan
               </p>
-              <p>
+              <p class="timeline-text">
                 Low-power digital IC design and fault-tolerant computing, developing energy-efficient and reliable computing architectures.
               </p>
 
