--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
               <span>May 2025 — Aug 2025</span>
 
               <p class="timeline-text">
-                Samsung Semiconductor, San Jose, CA, USA (On-site)
+                <span>Samsung Semiconductor, San Jose, CA, USA (On-site)</span>
               </p>
               <p class="timeline-text">
                 Design-Technology Co-Optimization (DTCO) Engineer at Samsung, focusing on advanced standard cell library and SRAM design. Experienced in developing DRC/LVS rule decks, and optimizing library architectures for diverse applications.
@@ -546,7 +546,7 @@
               <span>May 2024 — Aug 2024</span>
 
               <p class="timeline-text">
-                Samsung Semiconductor, San Jose, CA, USA (On-site)
+                <span>Samsung Semiconductor, San Jose, CA, USA (On-site)</span>
               </p>
               <p class="timeline-text">
                 Advanced Design of SRAM Bitcells and Peripheral Circuits
@@ -561,7 +561,7 @@
               <span>Aug 2020 — Dec 2021</span>
 
               <p class="timeline-text">
-                Southeast University, Nanjing, Jiangsu, China (On-site)
+                <span>Southeast University, Nanjing, Jiangsu, China (On-site)</span>
               </p>
               <p class="timeline-text">
                 Advisor: Prof. Weiwei Shan
