--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
             next generation of intelligent, reliable, and resource-efficient technologies.
           </p>
 
+          <p>
+            Fun Fact: I am the first students of my advisor.
+          </p>
+
         </section>
 
 
