--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           </p>
 
           <p>
-            Fun Fact: I am the first students of my advisor.
+            Fun Fact: I am the first student of my advisor.
           </p>
 
         </section>
